--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ The above copyright notice and this permission notice shall be included in all c
   <nav class="navbar navbar-expand-lg fixed-top navbar-transparent " color-on-scroll="300">
     <div class="container">
       <div class="navbar-translate">
-        <a class="navbar-brand" href="https://www.gabrielballerini.com.ar" rel="tooltip" data-placement="bottom">
+        <a class="navbar-brand" href="https://www.gabrielballerini.com" rel="tooltip" data-placement="bottom">
           Gabriel Ballerini
         </a>
         <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
