--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ The above copyright notice and this permission notice shall be included in all c
 
 <body class="index-page sidebar-collapse">
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg fixed-top navbar-transparent " color-on-scroll="300">
+  <nav class="navbar navbar-expand-md fixed-top navbar-transparent" color-on-scroll="300">
     <div class="container">
       <div class="navbar-translate">
         <a class="navbar-brand" href="https://www.gabrielballerini.com" rel="tooltip" data-placement="bottom">
@@ -55,25 +55,25 @@ The above copyright notice and this permission notice shall be included in all c
           <li class="nav-item">
             <a class="nav-link" rel="tooltip" title="Follow us on Twitter" data-placement="bottom" href="https://twitter.com/balleriniOk" target="_blank">
               <i class="fa fa-twitter"></i>
-              <p class="d-lg-none">Twitter</p>
+              <p class="d-md-none">Twitter</p>
             </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" rel="tooltip" title="Like us on Facebook" data-placement="bottom" href="https://www.facebook.com/balleriniOk" target="_blank">
               <i class="fa fa-facebook-square"></i>
-              <p class="d-lg-none">Facebook</p>
+              <p class="d-md-none">Facebook</p>
             </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" rel="tooltip" title="Follow us on Instagram" data-placement="bottom" href="https://www.instagram.com/balleriniok/" target="_blank">
               <i class="fa fa-instagram"></i>
-              <p class="d-lg-none">Instagram</p>
+              <p class="d-md-none">Instagram</p>
             </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" rel="tooltip" title="Star on GitHub" data-placement="bottom" href="https://www.youtube.com/gabrielBallerini" target="_blank">
               <i class="fa fa-youtube"></i>
-              <p class="d-lg-none">YouTube</p>
+              <p class="d-md-none">YouTube</p>
             </a>
           </li>
           <!--li class="nav-item">
@@ -91,18 +91,18 @@ The above copyright notice and this permission notice shall be included in all c
   <div class="page-header section-dark" style="background-image: url('./assets/img/04.jpg')">
     <div class="filter"></div>
     <div class="content-center">
-      <div class="container">
+      <!--div class="container">
         <div class="title-brand">
           <h1 class="presentation-title">Gabriel Ballerini</h1>
-          <!--div class="fog-low">
+          <div class="fog-low">
             <img src="./assets/img/fog-low.png" alt="">
           </div>
           <div class="fog-low right">
             <img src="./assets/img/fog-low.png" alt="">
-          </div-->
+          </div>
         </div>
         <h2 class="presentation-subtitle text-center">Bioeticista<br>Referente de Valores para mi País</h2>
-      </div>
+      </div-->
     </div>
     <!--div class="moving-clouds" style="background-image: url('./assets/img/banner.jpg'); "></div-->
     <!--h6 class="category category-absolute"></h6-->
@@ -125,14 +125,17 @@ The above copyright notice and this permission notice shall be included in all c
     <div class="section section-dark-blue section-nucleo-icons">
       <div class="container">
           <div class="row">
-            <!--div class="col-md-4">
-              
-            </div-->
-            <div class="col-md-5 offset-md-1">
+            <div class="col-sm offset-md-1 pb-4">
+              <h3 class="presentation-title">Redes</h>  
+            </div>
+          </div>
+          
+          <div class="row">
+            <div class="col-md-5 col-lg-4 offset-md-1 text-center">
               <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fballeriniok%2F&tabs=timeline&width=340&height=550&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="550" style="border:none;overflow:hidden;margin-bottom: 1em" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
             </div>
             <br>
-            <div class="col-md-4">
+            <div class="col-md-4 offset-md-1 text-center">
                 <a class="twitter-timeline" data-height="550" href="https://twitter.com/BalleriniOK?ref_src=twsrc%5Etfw">Tweets by BalleriniOK</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </div>
             <!--div class="col-md-4">
