--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@ The above copyright notice and this permission notice shall be included in all c
 
 <body class="index-page sidebar-collapse">
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-md fixed-top navbar-transparent" color-on-scroll="300">
+  <nav class="navbar navbar-expand-md fixed-top navbar-transparent" color-on-scroll="-5">
     <div class="container">
       <div class="navbar-translate">
         <a class="navbar-brand" href="https://www.gabrielballerini.com" rel="tooltip" data-placement="bottom">
-          Gabriel Ballerini
+          <img src="./assets/img/firma.png" style="height: 55px; margin:0">
         </a>
         <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-bar bar1"></span>
