--- a/prensa.html
+++ b/prensa.html
@@ -20,11 +20,18 @@ The above copyright notice and this permission notice shall be included in all c
 <head>
   <meta charset="utf-8" />
   <link rel="apple-touch-icon" sizes="76x76" href="./assets/img//apple-icon.png">
-  <link rel="icon" type="image/png" href="./assets/img//favicon.png">
+  <link rel="icon" type="image/png" href="./assets/img//og-img.png">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <title>
     Gabriel Ballerini
   </title>
+
+  <meta property="og:title" content="Gabriel Ballerini" />
+  <meta property="og:description" content="Bioeticista Referente de Valores para mi País">
+  <meta property="og:type" content="Página Oficial" />
+  <meta property="og:url" content="http://www.gabrielballerini.com/" />
+  <meta property="og:image" content="https://a.imge.to/2019/07/16/LFPMx.jpg" />
+
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
   <!--     Fonts and icons     -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
@@ -32,8 +39,7 @@ The above copyright notice and this permission notice shall be included in all c
   <!-- CSS Files -->
   <link href="./assets/css/bootstrap.min.css" rel="stylesheet" />
   <link href="./assets/css/paper-kit.css?v=2.2.0" rel="stylesheet" />
-  <!-- CSS Just for demo purpose, don't include it in your project -->
-  <link href="./assets/demo/demo.css" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
 </head>
 
 <body class="index-page sidebar-collapse">
@@ -41,7 +47,7 @@ The above copyright notice and this permission notice shall be included in all c
   <nav class="navbar navbar-expand-md fixed-top navbar-transparent" color-on-scroll="-5">
     <div class="container">
       <div class="navbar-translate">
-        <a class="navbar-brand" href="https://www.gabrielballerini.com" rel="tooltip" data-placement="bottom">
+        <a class="navbar-brand" href="index.html" rel="tooltip" data-placement="bottom">
           <img src="./assets/img/firma.png" style="height: 55px; margin:0">
         </a>
         <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
@@ -52,6 +58,18 @@ The above copyright notice and this permission notice shall be included in all c
       </div>
       <div class="collapse navbar-collapse justify-content-end" id="navigation">
         <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" rel="tooltip" title="Biografía" data-placement="bottom" href="index.html">
+              <i class="fa fa-user"></i>
+              <p class="d-md-none">Biografía</p>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" rel="tooltip" title="Prensa" data-placement="bottom" href="prensa.html">
+              <i class="fa fa-newspaper-o"></i>
+              <p class="d-md-none">Prensa</p>
+            </a>
+          </li>
           <li class="nav-item">
             <a class="nav-link" rel="tooltip" title="Twitter" data-placement="bottom" href="https://twitter.com/balleriniOk" target="_blank">
               <i class="fa fa-twitter"></i>
@@ -74,12 +92,6 @@ The above copyright notice and this permission notice shall be included in all c
             <a class="nav-link" rel="tooltip" title="YouTube" data-placement="bottom" href="https://www.youtube.com/gabrielBallerini" target="_blank">
               <i class="fa fa-youtube"></i>
               <p class="d-md-none">YouTube</p>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" rel="tooltip" title="Prensa" data-placement="bottom" href="prensa.html" target="_blank">
-              <i class="far fa-newspaper"></i>
-              <p class="d-md-none">Prensa</p>
             </a>
           </li>
         </ul>
@@ -108,7 +120,10 @@ The above copyright notice and this permission notice shall be included in all c
     <h6 class="category category-absolute"></h6>
   </div> -->
 
- <div class="main" style="background-image:url('./assets/img/banner.jpg')">
+  <div style="background-image: url('./assets/img/prensa-banner.jpg'); height: 300px">
+  </div>
+
+  <div class="main">
     <div class="section">
       
         <div class="row">
@@ -199,8 +214,8 @@ The above copyright notice and this permission notice shall be included in all c
         <div class="row">
           <nav class="footer-nav">
             <ul>
-              <li>
-                <a href="#">Ir Arriba</a>
+              <li id="volver">
+                <a href="#">VOLVER &#8593;</a>
               </li>
               <!-- <li>
                 <a href="http://blog.creative-tim.com/" target="_blank">Blog</a>
