--- a/index.html
+++ b/index.html
@@ -112,9 +112,11 @@ The above copyright notice and this permission notice shall be included in all c
     <div class="section">
         <div class="row">
           <div class="col-md-8 ml-auto mr-auto">
-            <!-- <h2 class="title">Biografía</h2>
-            <img src="./assets/img/bio.jpg" class="text-img"> -->
-            <p><i>(..próximamente..)</i></p>          
+          <h2 class="title">Biografía</h2>
+            <img src="./assets/img/bio.jpg" class="text-img">
+            <p>Primer Candidato a Diputado Nacional por el Partido Demócrata Cristiano de la Ciudad Autónoma de Buenos Aires. Dirigente de #Valoresparamipais. Especializado con una maestría en Ética Biomédica cursada en el Instituto de Bioética de la Facultad de Ciencias Médicas de la Pontificia Universidad Católica Argentina (UCA), es además, licenciado y profesor de Nivel Medio y Superior en Teología, graduado en el Seminario Internacional Teológico Bautista.</p>
+            <p>Actualmente sus conferencias nacionales e internacionales están ayudando a desenmascarar la ideología de género y combatir al progresismo abortista, siendo uno de los referentes evangélicos más reconocidos en la defensa de la vida, la familia y la promoción de valores que permitan alcanzar una sociedad mejor. Como bioeticista fue miembro titular y fundador del Comité de Bioética del Complejo Médico Churruca-Visca, uno de los hospitales universitarios más destacados del país.</p>
+            <p>Se ha desempeñado como director de educación cristiana de la Confederación Evangélica Bautista (CEB) y como director de Bioética de la Alianza Cristiana de Iglesias Evangélicas de la República Argentina (ACIERA), teniendo un protagonismo muy activo tanto en el Congreso de la Nación como en los medios de comunicación en el debate contra el proyecto de ley que ha querido despenalizar y legalizar el aborto en Argentina.</p>               
           </div>
       </div>
   </div>
@@ -148,12 +150,6 @@ The above copyright notice and this permission notice shall be included in all c
               <li>
                 <a href="#">VOLVER &#8593;</a>
               </li>
-              <!-- <li>
-                <a href="http://blog.creative-tim.com/" target="_blank">Blog</a>
-              </li> -->
-              <!-- <li>
-                <a href="https://www.creative-tim.com/license" target="_blank">Licenses</a>
-              </li> -->
             </ul>
           </nav>
           <div class="credits ml-auto">
