--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ The above copyright notice and this permission notice shall be included in all c
       </div>
       <div class="collapse navbar-collapse justify-content-end" id="navigation">
         <ul class="navbar-nav">
-          <!-- <li class="nav-item">
+          <li class="nav-item">
             <a class="nav-link" rel="tooltip" title="Biografía" data-placement="bottom" href="index.html">
               <i class="fa fa-user"></i>
               <p class="d-md-none">Biografía</p>
@@ -68,7 +68,7 @@ The above copyright notice and this permission notice shall be included in all c
               <i class="fa fa-newspaper-o"></i>
               <p class="d-md-none">Prensa</p>
             </a>
-          </li> -->
+          </li>
           <li class="nav-item">
             <a class="nav-link" rel="tooltip" title="Twitter" data-placement="bottom" href="https://twitter.com/balleriniOk" target="_blank">
               <i class="fa fa-twitter"></i>
