Smooth scroll added

--- a/prensa.html
+++ b/prensa.html
@@ -100,27 +100,7 @@ The above copyright notice and this permission notice shall be included in all c
   </nav>
   <!-- End Navbar -->
 
-  <!-- <div class="page-header section-dark" style="background-image: url('./assets/img/03.jpg')">
-    <div class="filter"></div>
-    <div class="content-center">
-      div class="container">
-        <div class="title-brand">
-          <h1 class="presentation-title">Gabriel Ballerini</h1>
-          <div class="fog-low">
-            <img src="./assets/img/fog-low.png" alt="">
-          </div>
-          <div class="fog-low right">
-            <img src="./assets/img/fog-low.png" alt="">
-          </div>
-        </div>
-        <h2 class="presentation-subtitle text-center">Bioeticista<br>Referente de Valores para mi País</h2>
-      </div
-    </div>
-    <iv class="moving-clouds" style="background-image: url('./assets/img/banner.jpg'); "></div>
-    <h6 class="category category-absolute"></h6>
-  </div> -->
-
-  <div style="background-image: url('./assets/img/prensa-banner.jpg'); height: 300px">
+  <div id="top" style="background-image: url('./assets/img/prensa-banner.jpg'); height: 300px">
   </div>
 
   <div class="main">
@@ -214,7 +194,7 @@ The above copyright notice and this permission notice shall be included in all c
           <nav class="footer-nav">
             <ul>
               <li id="volver">
-                <a href="#">VOLVER &#8593;</a>
+                <a href="#top">VOLVER &#8593;</a>
               </li>
               <!-- <li>
                 <a href="http://blog.creative-tim.com/" target="_blank">Blog</a>
