--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@ The above copyright notice and this permission notice shall be included in all c
   <link href="./assets/css/bootstrap.min.css" rel="stylesheet" />
   <link href="./assets/css/paper-kit.css?v=2.2.0" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 
 <body class="index-page sidebar-collapse">
@@ -99,7 +100,7 @@ The above copyright notice and this permission notice shall be included in all c
   </nav>
   <!-- End Navbar -->
 
-  <div class="page-header section-dark" style="background-image: url('./assets/img/banner.jpg')">
+  <div id="top" class="page-header section-dark" style="background-image: url('./assets/img/banner.jpg')">
     <div class="content-center">
       <div class="container">
          <img id="lista5" src="./assets/img/lista5.png">        
@@ -150,7 +151,7 @@ The above copyright notice and this permission notice shall be included in all c
           <nav class="footer-nav">
             <ul>
               <li>
-                <a href="#">VOLVER &#8593;</a>
+                <a href="#top">VOLVER &#8593;</a>
               </li>
             </ul>
           </nav>
