--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ The above copyright notice and this permission notice shall be included in all c
   <!-- End Navbar -->
 
   <div id="top" class="page-header section-dark" style="background-image: url('./assets/img/banner.jpg')">
-    <div class="content-center">
+    <div class="content">
       <div class="container">
          <img id="lista5" src="./assets/img/lista5.png">        
       </div>
