--- a/prensa.html
+++ b/prensa.html
@@ -100,7 +100,7 @@ The above copyright notice and this permission notice shall be included in all c
   </nav>
   <!-- End Navbar -->
 
-  <div id="top" style="background-image: url('./assets/img/prensa-banner.jpg'); height: 300px">
+  <div id="top" class="prensa-banner" style="background-image: url('./assets/img/prensa-banner.jpg'); height: 300px">
   </div>
 
   <div class="main">
