--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ The above copyright notice and this permission notice shall be included in all c
   <div class="page-header section-dark" style="background-image: url('./assets/img/banner.jpg')">
     <div class="content">
       <div class="container">
-         <img id="lista5" src="./assets/img/lista5.png">        
+         <img id="lista5" src="./assets/img/lista5.jpg">        
       </div>
     </div>
     <h6 class="category category-absolute"></h6>   
