--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ The above copyright notice and this permission notice shall be included in all c
   </nav>
   <!-- End Navbar -->
 
-  <div id="top" class="page-header section-dark" style="background-image: url('./assets/img/banner.jpg')">
+  <div id="top" class="page-header" style="background-image: url('./assets/img/banner.jpg')">
     <div class="content">
       <div class="container">
          <img id="lista5" src="./assets/img/lista5.jpg">        
@@ -128,7 +128,7 @@ The above copyright notice and this permission notice shall be included in all c
       <div class="container">
           <div class="row">
             <div class="col-sm offset-md-1 pb-4">
-              <h3 class="presentation-title">Redes</h>  
+              <h3 class="presentation-title">Redes</h3>  
             </div>
           </div>
           
@@ -143,6 +143,7 @@ The above copyright notice and this permission notice shall be included in all c
         </div>
       </div>
    </div>
+
 
        
      <footer class="footer footer-black  footer-white ">
