--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ The above copyright notice and this permission notice shall be included in all c
 <meta property="og:description" content="Bioeticista Referente de Valores para mi País">
 <meta property="og:type" content="Página Oficial" />
 <meta property="og:url" content="http://www.gabrielballerini.com/" />
-<meta property="og:image" content="https://a.imge.to/2019/07/16/LFPMx.jpg" />
+<meta property="og:image" content="https://b.imge.to/2019/07/21/H3xzO.jpg" />
 
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
   <!--     Fonts and icons     -->
@@ -100,16 +100,14 @@ The above copyright notice and this permission notice shall be included in all c
   </nav>
   <!-- End Navbar -->
 
-  <div id="top" class="page-header" style="background-image: url('./assets/img/banner.jpg')">
-
+  <div id="top1" class="page-header" style="background-image: url('./assets/img/banner.jpg')">
     <div class="content">
       <div class="container">
-         <img id="lista5" src="./assets/img/lista5.jpg">        
+         <img id="lista5" src="./assets/img/lista5.png">        
       </div>
     </div>
     <h6 class="category category-absolute"></h6>   
    </div>
-
 
  <div class="main">
     <div class="section">
@@ -118,16 +116,15 @@ The above copyright notice and this permission notice shall be included in all c
             <div class="col-md-8 ml-auto mr-auto">
             <h2 class="title">Biografía</h2>
               <img src="./assets/img/bio.jpg" class="text-img">
-              <p>Primer Candidato a Diputado Nacional por el Partido Demócrata Cristiano de la Ciudad Autónoma de Buenos Aires. Dirigente de #Valoresparamipais. Especializado con una maestría en Ética Biomédica cursada en el Instituto de Bioética de la Facultad de Ciencias Médicas de la Pontificia Universidad Católica Argentina (UCA), es además, licenciado y profesor de Nivel Medio y Superior en Teología, graduado en el Seminario Internacional Teológico Bautista.</p>
-              <p>Actualmente sus conferencias nacionales e internacionales están ayudando a desenmascarar la ideología de género y combatir al progresismo abortista, siendo uno de los referentes evangélicos más reconocidos en la defensa de la vida, la familia y la promoción de valores que permitan alcanzar una sociedad mejor. Como bioeticista fue miembro titular y fundador del Comité de Bioética del Complejo Médico Churruca-Visca, uno de los hospitales universitarios más destacados del país.</p>
-              <p>Se ha desempeñado como director de educación cristiana de la Confederación Evangélica Bautista (CEB) y como director de Bioética de la Alianza Cristiana de Iglesias Evangélicas de la República Argentina (ACIERA), teniendo un protagonismo muy activo tanto en el Congreso de la Nación como en los medios de comunicación en el debate contra el proyecto de ley que ha querido despenalizar y legalizar el aborto en Argentina.</p>               
+              <p>Primer Candidato a Diputado Nacional por el Partido Demócrata Cristiano de la Ciudad Autónoma de Buenos Aires. Dirigente de Valores para mi País que integra el Frente NOS. Especializado con una maestría en Ética Biomédica cursada en el  Instituto de Bioética de la Facultad de Ciencias Médicas de la Pontificia Universidad Católica Argentina (UCA), es además, licenciado y profesor de Nivel Medio y Superior en Teología, graduado en el Seminario Internacional Teológico Bautista.</p>
+              <p>Actualmente sus conferencias nacionales e internacionales están ayudando a desenmascarar la ideología de género y combatir al progresismo abortista, siendo uno de los referentes evangélicos más reconocidos en la defensa de la vida, la familia y la promoción de valores que permitan alcanzar una sociedad mejor.</p>
+              <p>Como bioeticista fue miembro titular y fundador del Comité de Bioética del Complejo Médico de la Policía Federal Argentina Churruca-Visca, uno de los hospitales universitarios más destacados del país. Se ha desempeñado como director de educación cristiana de la Confederación Evangélica Bautista (CEB) y como director de Bioética de la Alianza Cristiana de Iglesias Evangélicas de la República Argentina (ACIERA), teniendo un protagonismo muy activo tanto en el Congreso de la Nación como en los medios de comunicación en el debate contra el proyecto de ley que ha querido despenalizar y legalizar el aborto en Argentina.</p>
+              <p>Miembro de la Junta Directiva de la Confederación Evangélica Bautista Argentina. Junto a su esposa son pastores titulares de la Iglesia Evangélica Bautista Vida y Esperanza, del barrio de Floresta en la Ciudad Autónoma de Buenos Aires.</p>
             </div>
         </div>
     </div>
   </div>
 </div>
-=======
->>>>>>> master
     <div class="section section-dark-blue section-nucleo-icons">
       <div class="container">
           <div class="row">
@@ -156,7 +153,7 @@ The above copyright notice and this permission notice shall be included in all c
           <nav class="footer-nav">
             <ul>
               <li>
-                <a href="#top">VOLVER &#8593;</a>
+                <a href="#top1">VOLVER &#8593;</a>
               </li>
             </ul>
           </nav>
@@ -184,11 +181,7 @@ The above copyright notice and this permission notice shall be included in all c
     <script src="./assets/js/plugins/bootstrap-datepicker.js" type="text/javascript"></script>
     <!-- Control Center for Paper Kit: parallax effects, scripts for the example pages etc -->
     <script src="./assets/js/paper-kit.js?v=2.2.0" type="text/javascript"></script>
-<<<<<<< HEAD
 
-=======
-   
->>>>>>> master
     <script>
       $(document).ready(function() {
 
