--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@ The above copyright notice and this permission notice shall be included in all c
   </nav>
   <!-- End Navbar -->
 
-  <div id="top1" class="page-header" style="background-image: url('./assets/img/banner.jpg')">
+  <div id="top" class="page-header bannerDesk" style="background-image: url('./assets/img/banner.jpg')">
+  <div id="top" class="page-header bannerMob" style="background-image: url('./assets/img/banner-mob.jpg')">
     <div class="content">
       <div class="container">
          <img id="lista5" src="./assets/img/lista5.png">        
@@ -108,6 +109,7 @@ The above copyright notice and this permission notice shall be included in all c
     </div>
     <h6 class="category category-absolute"></h6>   
    </div>
+  </div>
 
  <div class="main">
     <div class="section">
@@ -153,7 +155,7 @@ The above copyright notice and this permission notice shall be included in all c
           <nav class="footer-nav">
             <ul>
               <li>
-                <a href="#top1">VOLVER &#8593;</a>
+                <a href="#top">VOLVER &#8593;</a>
               </li>
             </ul>
           </nav>
