--- a/index.html
+++ b/index.html
@@ -100,8 +100,7 @@ The above copyright notice and this permission notice shall be included in all c
   </nav>
   <!-- End Navbar -->
 
-  <div id="top" class="page-header bannerDesk" style="background-image: url('./assets/img/banner.jpg')">
-  <div id="top" class="page-header bannerMob" style="background-image: url('./assets/img/banner-mob.jpg')">
+  <div id="top1" class="page-header" style="background-image: url('./assets/img/banner.jpg')">
     <div class="content">
       <div class="container">
          <img id="lista5" src="./assets/img/lista5.png">        
@@ -155,7 +154,7 @@ The above copyright notice and this permission notice shall be included in all c
           <nav class="footer-nav">
             <ul>
               <li>
-                <a href="#top">VOLVER &#8593;</a>
+                <a href="#top1">VOLVER &#8593;</a>
               </li>
             </ul>
           </nav>
