--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ The above copyright notice and this permission notice shall be included in all c
   </nav>
   <!-- End Navbar -->
 
-  <div id="top1" class="page-header" style="background-image: url('./assets/img/banner.jpg')">
+  <div id="top1" class="page-header">
     <div class="content">
       <div class="container">
          <img id="lista5" src="./assets/img/lista5.png">        
