--- a/prensa.html
+++ b/prensa.html
@@ -175,8 +175,12 @@ The above copyright notice and this permission notice shall be included in all c
               <span class="date"><br>03/04/2018</span></p></div>
             </a>          
 
+            <a href="http://www.radionacional.com.ar/tag/gabriel-ballerini/" target="_blank">
+              <div class="pbox1 pbox2"><div class="pressImg" style="background-image: url('./assets/img/02.jpg');"></div><p>Ballerini: "El aborto es un acto médico malo"<span class="date"><br>20/04/18</span></p></div>
+            </a>
+
             <a href="https://www.lared.am/gabriel-ballerini-hay-un-intento-cosificar-el-embrion-20180302-n1565945.html" target="_blank">
-              <div class="pbox1 pbox2"><div class="pressImg" style="background-image: url('./assets/img/08.jpg');"></div><p>Gabriel Ballerini: "Hay un intento de cosificar el embrión"
+              <div class="pbox1"><div class="pressImg" style="background-image: url('./assets/img/03.jpg');"></div><p>Gabriel Ballerini: "Hay un intento de cosificar el embrión"
                 <span class="date"><br>02/03/18</span></p></div>
             </a>
           </div>
