--- a/prensa.html
+++ b/prensa.html
@@ -118,7 +118,7 @@ The above copyright notice and this permission notice shall be included in all c
             </a>
               
             <a href="https://norteenlinea.com/buenos-aires/un-pastor-evangelico-es-el-primer-candidato-a-diputado-nacional-por-caba" target="_blank">
-              <div class="pbox2"><div class="pressImg" style="background-image: url('https://norteenlinea.com/media/k2/items/cache/b563e34fb8efec241efafb9e4359fd0c_L.jpg')"></div><p>Un pastor evangélico es el primer candidato a diputado nacional por CABA
+              <div class="pbox1 pbox2"><div class="pressImg" style="background-image: url('https://norteenlinea.com/media/k2/items/cache/b563e34fb8efec241efafb9e4359fd0c_L.jpg')"></div><p>Un pastor evangélico es el primer candidato a diputado nacional por CABA
               <span class="date"><br>07/08/19</span></p>
               </div>
             </a>
