--- a/prensa.html
+++ b/prensa.html
@@ -111,6 +111,11 @@ The above copyright notice and this permission notice shall be included in all c
           <div class="col-md-8 ml-auto mr-auto">
             <h2 class="title">Notas de Prensa</h2>
              
+            <a href="https://soundcloud.com/rsynchro/la-etica-medica-no-esta-exenta-de-haber-sido-alcanzada-por-la-devaluacion-en-la-argentina" target="_blank">
+              <div class="pbox1 pbox2"><div class="pressImg" style="background-image: url('./assets/img/11.jpg')"></div><p>Radio Synchro: "La ética médica no está exenta de haber sido alcanzada por la devaluación en la Argentina"
+              <span class="date"><br>18/09/19</span></p></div>
+            </a>
+
             <a href="https://www.adnciudad.com/index.php/6848-un-pastor-para-el-congreso" target="_blank">
               <div class="pbox1"><div class="pressImg" style="background-image: url('./assets/img/09.jpg')"></div><p>Un pastor para el Congreso
               <span class="date"><br>07/08/19</span></p></div>
