--- a/prensa.html
+++ b/prensa.html
@@ -28,7 +28,7 @@ The above copyright notice and this permission notice shall be included in all c
   </title>
 
   <meta property="og:title" content="Gabriel Ballerini" />
-  <meta property="og:description" content="Bioeticista Referente de Valores para mi País">
+  <meta property="og:description" content="Teólogo. Especialista en Ética Biomédica. Pastor">
   <meta property="og:type" content="Página Oficial" />
   <meta property="og:url" content="http://www.gabrielballerini.com/" />
   <meta property="og:image" content="https://b.imge.to/2019/07/21/H3xzO.jpg" />
