--- a/prensa.html
+++ b/prensa.html
@@ -111,6 +111,12 @@ The above copyright notice and this permission notice shall be included in all c
           <div class="col-md-8 ml-auto mr-auto">
             <h2 class="title">Notas de Prensa</h2>
              
+            <a href="http://www.laprensa.com.ar/481070-Dia-de-la-Etica-Medica-alcanzada-por-la-devaluacion.note.aspx" target="_blank">
+              <div class="pbox1 pbox2"><div class="pressImg" style="background-image: url('http://www.laprensa.com.ar/multimedios/imgs/108374_620.jpg')"></div><p>Día de la Etica Médica: ¿alcanzada por la devaluación?
+              <span class="date"><br>23/09/19</span></p></div>
+            </a>
+
+
             <a href="https://periodicolacomuna.com.ar/solicitan-declarar-a-regina-como-ciudad-pro-vida/" target="_blank">
               <div class="pbox1"><div class="pressImg" style="background-image: url('./assets/img/04.jpg')"></div><p>Solicitan declarar a Regina como "Ciudad pro vida"
               <span class="date"><br>22/09/19</span></p></div>
