--- a/prensa.html
+++ b/prensa.html
@@ -72,7 +72,7 @@ The above copyright notice and this permission notice shall be included in all c
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" rel="tooltip" title="Prensa" data-placement="bottom" href="prensa.html">
+            <a class="nav-link" rel="tooltip" title="Agenda" data-placement="bottom" href="agenda.html">
               <i class="fa fa-calendar"></i>
               <p class="d-md-none">Agenda</p>
             </a>
