--- a/agenda.html
+++ b/agenda.html
@@ -128,32 +128,37 @@ The above copyright notice and this permission notice shall be included in all c
 
 
                 <tr>
-                  <th scope="row">OCT 11</th>
+                  <th scope="row" style="text-align: center;">
+                    OCT<br><span class="date">11</span></th>
                   <td><span class="tdtitle">MENDOZA, Ciudad.</span><br>
                   Congreso Nacional de Jóvenes JEBA<br>
                   Emilio Civit 791, Maipú. Stadium Arena</td>
                 </tr>
 
                 <tr>
-                  <th scope="row">SEP 11</th>
+                  <th scope="row" style="text-align: center;">
+                    SEP<br><span class="date">11</span></th>
                   <td><span class="tdtitle">VILLA REGINA, Río Negro. 17:30hs. y 20:00hs.</span><br>
                   25 de mayo 62, Cine Teatro Círculo Italiano</td>
                 </tr>
 
                 <tr>
-                  <th scope="row">SEP 08</th>
+                  <th scope="row" style="text-align: center;">
+                    SEP<br><span class="date">08</span></th>
                   <td><span class="tdtitle">CABA, Buenos Aires. 19:00hs.</span><br>
                   Rodriguez Peña 525, Partido Demócrata</td>
                 </tr>
 
                 <tr>
-                  <th scope="row">SEP 01</th>
+                  <th scope="row" style="text-align: center;">
+                    SEP<br><span class="date">01</span></th>
                   <td><span class="tdtitle">VILLA MERCEDES, San Luis. 10:00hs.</span><br>
                   Pedernera 1484, Primera Iglesia Bautista</td>
                 </tr>
                 
                 <tr>
-                  <th scope="row">AGO 31</th>
+                  <th scope="row" style="text-align: center;">
+                    AGO<br><span class="date">31</span></th>
                   <td><span class="tdtitle">SAN LUIS, Ciudad. 15:00hs. y 18:30hs.</span><br>
                   Rivadavia 1049, Iglesia Bautista del Centro</td>
                 </tr>
