--- a/agenda.html
+++ b/agenda.html
@@ -126,7 +126,14 @@ The above copyright notice and this permission notice shall be included in all c
               </thead>              
               <tbody>
 
-
+<tr>
+                  <th scope="row" style="text-align: center;">
+                    OCT<br><span class="date">25</span></th>
+                  <td><span class="tdtitle">CABA, Belgrano. 19:00 hs.</span><br>
+                  Charla Entre Jóvenes<br>
+                  Cupos limitados, reserva 011 5484-9909</td>
+                </tr>
+               
                 <tr>
                   <th scope="row" style="text-align: center;">
                     OCT<br><span class="date">11</span></th>
