--- a/agenda.html
+++ b/agenda.html
@@ -129,7 +129,7 @@ The above copyright notice and this permission notice shall be included in all c
                   <th scope="row" style="text-align: center;">
                     NOV<br><span class="date">23</span></th>
                   <td><span class="tdtitle">Buenos Aires, Grand Bourg. 16:00 hs.</span><br>
-                  TEOLOGÍA QUEER, curso presencial y online 
+                  TEOLOGÍA QUEER, curso presencial y online <br>
                   Ricardo Rojas 1800</td>
                 </tr>
                
