--- a/agenda.html
+++ b/agenda.html
@@ -107,7 +107,7 @@ The above copyright notice and this permission notice shall be included in all c
   </nav>
   <!-- End Navbar -->
 
-  <div id="top" class="agenda-banner" style="background-image: url('./assets/img/agenda-banner.jpg'); height: 300px; background-repeat: no-repeat; background-size: cover;">
+  <div id="top" class="agenda-banner" style="background-image: url('./assets/img/agenda-banner.JPG'); height: 300px; background-repeat: no-repeat; background-size: cover;">
   </div>
 
   <div class="main">
