--- a/agenda.html
+++ b/agenda.html
@@ -136,7 +136,7 @@ The above copyright notice and this permission notice shall be included in all c
 <tr>
                   <th scope="row" style="text-align: center;">
                     OCT<br><span class="date">25</span></th>
-                  <td><span class="tdtitle">CABA, Buenos Aires, Belgrano. 19:00 hs.</span><br>
+                  <td><span class="tdtitle">CABA, Buenos Aires, 19:00 hs.</span><br>
                   Charla "Entre Jóvenes"<br>
                   Cupos limitados, reserva 011 5484-9909</td>
                 </tr>
@@ -152,7 +152,7 @@ The above copyright notice and this permission notice shall be included in all c
                 <tr>
                   <th scope="row" style="text-align: center;">
                     SEP<br><span class="date">11</span></th>
-                  <td><span class="tdtitle">VILLA REGINA, Río Negro. 17:30 hs. y 20:00 hs.</span><br>
+                  <td><span class="tdtitle">VILLA REGINA, Río Negro. 20:00 hs.</span><br>
                   Cine Teatro Círculo Italiano <br>
                   25 de mayo 62</td>
                 </tr>
@@ -161,7 +161,8 @@ The above copyright notice and this permission notice shall be included in all c
                   <th scope="row" style="text-align: center;">
                     SEP<br><span class="date">08</span></th>
                   <td><span class="tdtitle">CABA, Buenos Aires. 19:00 hs.</span><br>
-                  Rodriguez Peña 525, Partido Demócrata</td>
+                  J+ovenes del Partido Demócrata <br>
+                  Rodriguez Peña 525 </td>
                 </tr>
 
                 <tr>
@@ -200,9 +201,9 @@ The above copyright notice and this permission notice shall be included in all c
                <tr>
                   <th scope="row" style="text-align: center;">
                     JUL<br><span class="date">28</span></th>
-                  <td><span class="tdtitle">CABA, Buenos Aires. Palermo 10:30 hs. y 18:30 hs.</span><br>
+                  <td><span class="tdtitle">CABA, Buenos Aires. Palermo </span><br>
                   Iglesia Evangélica Bautista El Rey Jesús <br>
-                  José A. Cabrera 4656. </td>
+                  José A. Cabrera 4656 - 10:30 hs. y 18:30 hs.</td>
                 </tr>
                
 <tr>
@@ -241,9 +242,8 @@ The above copyright notice and this permission notice shall be included in all c
                   <th scope="row" style="text-align: center;">
                     JUN<br><span class="date">29</span></th>
                   <td><span class="tdtitle">MENDOZA, Ciudad. </span><br>
-                  Curso Intensivo de Bioética. 9 a 17 hs. - Plenaria abierta 20 hs.<br>
-                  Auditorio de la Alameda. <br>
-                  Av. San Martin 2020. </td>
+                  Curso Intensivo de Bioética. 9 a 17 hs. Plenaria 20 hs.<br>
+                  Av. San Martin 2020, Auditorio de la Alameda </td>
                 </tr>
                
                <tr>
