--- a/agenda.html
+++ b/agenda.html
@@ -133,6 +133,14 @@ The above copyright notice and this permission notice shall be included in all c
                   Ricardo Rojas 1800</td>
                 </tr>
                
+ <tr>
+                  <th scope="row" style="text-align: center;">
+                    NOV<br><span class="date">15</span></th>
+                  <td><span class="tdtitle">차 살 따 목회자 아카데미 Entrenamiento para pastores </span><br>
+                  Los desafíos de la Bioética en la pastoral del siglo XXI <br>
+                  Provincia de Salta</td>
+                </tr>
+               
 <tr>
                   <th scope="row" style="text-align: center;">
                     OCT<br><span class="date">25</span></th>
