--- a/agenda.html
+++ b/agenda.html
@@ -138,7 +138,7 @@ The above copyright notice and this permission notice shall be included in all c
                     NOV<br><span class="date">15</span></th>
                   <td><span class="tdtitle">차 살 따 목회자 아카데미 Entrenamiento para pastores </span><br>
                   Los desafíos de la Bioética en la pastoral del siglo XXI <br>
-                  Provincia de Salta</td>
+                  Morón 3744, CABA. Iglesia Evangélica Coreana So-Mang</td>
                 </tr>
                
 <tr>
