new banner agenda

--- a/agenda.html
+++ b/agenda.html
@@ -107,7 +107,7 @@ The above copyright notice and this permission notice shall be included in all c
   </nav>
   <!-- End Navbar -->
 
-  <div id="top" class="agenda-banner" style="background-image: url('./assets/img/agenda-banner.JPG'); height: 300px; background-repeat: no-repeat; background-size: cover;">
+  <div id="top2" class="agenda-banner">
   </div>
 
   <div class="main">
@@ -415,7 +415,7 @@ The above copyright notice and this permission notice shall be included in all c
           <nav class="footer-nav">
             <ul>
               <li id="volver">
-                <a href="#top">VOLVER &#8593;</a>
+                <a href="#top2">VOLVER &#8593;</a>
               </li>
               <!-- <li>
                 <a href="http://blog.creative-tim.com/" target="_blank">Blog</a>
