--- a/prensa.html
+++ b/prensa.html
@@ -1,19 +1,3 @@
-
-<!--
-=========================================================
- Paper Kit 2 - v2.2.0
-=========================================================
-
- Product Page: https://www.creative-tim.com/product/paper-kit-2
- Copyright 2019 Creative Tim (https://www.creative-tim.com)
- Licensed under MIT (https://github.com/creativetimofficial/paper-kit-2/blob/master/LICENSE.md)
-
- Coded by Creative Tim
-
-=========================================================
-
-The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software. -->
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -107,7 +91,7 @@ The above copyright notice and this permission notice shall be included in all c
   </nav>
   <!-- End Navbar -->
 
-  <div id="top" class="prensa-banner" style="background-image: url('./assets/img/prensa-banner.jpg'); height: 300px">
+  <div id="top" class="prensa-banner" style="background-image: url('./assets/img/prensa-banner.jpg'); height: 300px; background-repeat: no-repeat; background-size: cover;">
   </div>
 
   <div class="main">
