--- a/prensa.html
+++ b/prensa.html
@@ -1,7 +1,3 @@
-<<<<<<< HEAD
-
-=======
->>>>>>> master
 <!DOCTYPE html>
 <html lang="en">
 
@@ -95,7 +91,7 @@
   </nav>
   <!-- End Navbar -->
 
-  <div id="top" class="prensa-banner" style="background-image: url('./assets/img/prensa-banner.jpg'); height: 300px; background-repeat: no-repeat; background-size: cover;">
+  <div id="top" class="prensa-banner" style="background-image: url('./assets/img/prensa-banner.jpg'); min-height: 50vh; background-repeat: no-repeat; background-size: cover;">
   </div>
 
   <div class="main">
