--- a/agenda.html
+++ b/agenda.html
@@ -115,8 +115,8 @@ The above copyright notice and this permission notice shall be included in all c
                     <div class="col-md-8 ml-auto mr-auto">
                         <h2 class="title">Conferencias</h2>
                         <ul class="nav nav-tabs">
-                          <li><button class="link" onclick="openCity(event, '2019')">2019</button></li>
-                          <li><button class="link" onclick="openCity(event, '2020')">2020</button></li>
+                          <li><button class="tablinks active" onclick="openCity(event, '2019')">2019</button></li>
+                          <li><button class="tablinks" onclick="openCity(event, '2020')">2020</button></li>
                         </ul>
                         <div class="tab">
                            
@@ -124,12 +124,6 @@ The above copyright notice and this permission notice shall be included in all c
                         </div>
                         <div id="2019" class="tabcontent" style="display: block;">
                               <table class="table">
-                                  <thead>
-                                      <tr>
-                                          <th class="a-date">Fecha</th>
-                                          <th class="a-place">Lugar</th>
-                                      </tr>
-                                  </thead>
                                   <tbody>
                                       <tr>
                                           <th scope="row" style="text-align: center;">
