--- a/prensa.html
+++ b/prensa.html
@@ -25,6 +25,7 @@
   <link href="./assets/css/bootstrap.min.css" rel="stylesheet" />
   <link href="./assets/css/paper-kit.css?v=2.2.0" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
+  <link href="./assets/css/style.css" rel="stylesheet" />
 </head>
 
 <body class="index-page sidebar-collapse">
