--- a/agenda.html
+++ b/agenda.html
@@ -100,13 +100,14 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-md-8 ml-auto mr-auto">
-                        <h2 class="title">Conferencias</h2>
-                        <ul class="nav nav-tabs">
+                        <h2 class="title" style="float: left; margin-right: 15px;">Conferencias</h2>
+                        <a class="photobut" href="gallery.html">FOTOS</a>
+
+                        <ul class="nav nav-tabs" style="clear: both">
                             <li><button class="tablinks active" onclick="openCity(event, '2019')">2019</button></li>
                             <li><button class="tablinks" onclick="openCity(event, '2020')">2020</button></li>
                         </ul>
-                        <div class="tab">
-                        </div>
+
                         <div id="2020" class="tabcontent">
                             <table class="table">
                                 <tbody>
