--- a/gallery.html
+++ b/gallery.html
@@ -241,8 +241,8 @@
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a href="./gallery/c28.JPG" class="fancybox" rel="ligthbox">
-                    <img src="./thumbnails/c28.JPG" class="zoom img-fluid " alt="">
+                <a href="./gallery/c28.jpg" class="fancybox" rel="ligthbox">
+                    <img src="./thumbnails/c28.jpg" class="zoom img-fluid " alt="">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
