--- a/gallery.html
+++ b/gallery.html
@@ -381,8 +381,8 @@
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a href="./gallery/c56.jog" class="fancybox" rel="ligthbox">
-                    <img src="./thumbnails/c56.jog" class="zoom img-fluid " alt="">
+                <a href="./gallery/c56.jpg" class="fancybox" rel="ligthbox">
+                    <img src="./thumbnails/c56.jpg" class="zoom img-fluid " alt="">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
@@ -461,8 +461,8 @@
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a href="./gallery/t04.JPG" class="fancybox" rel="ligthbox">
-                    <img src="./thumbnails/t04.JPG" class="zoom img-fluid " alt="">
+                <a href="./gallery/t04.jpg" class="fancybox" rel="ligthbox">
+                    <img src="./thumbnails/t04.jpg" class="zoom img-fluid " alt="">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
