--- a/gallery.html
+++ b/gallery.html
@@ -441,6 +441,51 @@
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a href="./gallery/c68.png" class="fancybox" rel="ligthbox">
+                    <img src="./thumbnails/c68.png" class="zoom img-fluid " alt="">
+                </a>
+            </div>
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a href="./gallery/c69.png" class="fancybox" rel="ligthbox">
+                    <img src="./thumbnails/c69.png" class="zoom img-fluid " alt="">
+                </a>
+            </div>
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a href="./gallery/c70.jpg" class="fancybox" rel="ligthbox">
+                    <img src="./thumbnails/c70.jpg" class="zoom img-fluid " alt="">
+                </a>
+            </div>
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a href="./gallery/c71.png" class="fancybox" rel="ligthbox">
+                    <img src="./thumbnails/c71.png" class="zoom img-fluid " alt="">
+                </a>
+            </div>
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a href="./gallery/c72.jpg" class="fancybox" rel="ligthbox">
+                    <img src="./thumbnails/c72.jpg" class="zoom img-fluid " alt="">
+                </a>
+            </div>
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a href="./gallery/c73.png" class="fancybox" rel="ligthbox">
+                    <img src="./thumbnails/c73.png" class="zoom img-fluid " alt="">
+                </a>
+            </div>
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a href="./gallery/c74.png" class="fancybox" rel="ligthbox">
+                    <img src="./thumbnails/c74.png" class="zoom img-fluid " alt="">
+                </a>
+            </div>
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a href="./gallery/c75.png" class="fancybox" rel="ligthbox">
+                    <img src="./thumbnails/c75.png" class="zoom img-fluid " alt="">
+                </a>
+            </div>
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a href="./gallery/c76.jpg" class="fancybox" rel="ligthbox">
+                    <img src="./thumbnails/c76.jpg" class="zoom img-fluid " alt="">
+                </a>
+            </div>
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a href="./gallery/t00.jpg" class="fancybox" rel="ligthbox">
                     <img src="./thumbnails/t00.jpg" class="zoom img-fluid " alt="">
                 </a>
