--- a/agenda.html
+++ b/agenda.html
@@ -123,12 +123,27 @@
                                             MAY<br><span class="date">05</span></td>
                                         <td><span class="tdtitle">ASUNCIÓN, Paraguay</span><br>
                                         </td>
+                                        <tr>
+                                        <td scope="row" style="text-align: center;">
+                                            ABR<br><span class="date">18</span></td>
+                                        <td><span class="tdtitle">ESTEBAN ECHEVERRÍA, Buenos Aires </span><br>
+                                            Primer Congreso de Pastores<br>
+                                            .</td>
+                                            </tr>                                        
                                     </tr>
                                     <tr>
                                         <td scope="row" style="text-align: center;">
                                             MAR<br><span class="date">21</span></td>
                                         <td><span class="tdtitle">MERLO, San Luis</span><br>
                                         </td>
+                                        
+                                        <tr>
+                                        <td scope="row" style="text-align: center;">
+                                            FEB<br><span class="date">23</span></td>
+                                        <td><span class="tdtitle">QUILMES, provincia de Buenos Aires </span><br>
+                                            Campamento de Jóvenes<br>
+                                            Iglesia del Puente, Quilmes.</td>
+                                            </tr>
                                     </tr>
                                 </tbody>
                             </table>
