--- a/gallery.html
+++ b/gallery.html
@@ -491,6 +491,11 @@
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a href="./gallery/c78.jpg" class="fancybox" rel="ligthbox">
+                    <img src="./thumbnails/c78.jpg" class="zoom img-fluid " alt="">
+                </a>
+            </div>
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a href="./gallery/t00.jpg" class="fancybox" rel="ligthbox">
                     <img src="./thumbnails/t00.jpg" class="zoom img-fluid " alt="">
                 </a>
@@ -759,7 +764,8 @@
             <img src="./med/c73.png" />
             <img src="./med/c74.png" />
             <img src="./med/c75.png" />
-            <img src="./med/c77.jpg" />
+            <img src="./med/c77.j8g" />
+            <img src="./med/c78.jpg" />
             <img src="./med/t00.jpg" />
             <img src="./med/t01.jpg" />
             <img src="./med/t02.png" />
