--- a/gallery.html
+++ b/gallery.html
@@ -764,7 +764,8 @@
             <img src="./med/c73.png" />
             <img src="./med/c74.png" />
             <img src="./med/c75.png" />
-            <img src="./med/c77.j8g" />
+            <img src="./med/c76.png" />
+            <img src="./med/c77.jpg" />
             <img src="./med/c78.jpg" />
             <img src="./med/t00.jpg" />
             <img src="./med/t01.jpg" />
