--- a/gallery.html
+++ b/gallery.html
@@ -795,7 +795,7 @@
             <img src="./med/c73.png" />
             <img src="./med/c74.png" />
             <img src="./med/c75.png" />
-            <img src="./med/c76.png" />
+            <img src="./med/c76.jpg" />
             <img src="./med/c77.jpg" />
             <img src="./med/c78.jpg" />
             <img src="./med/c79.jpg" />
